--- a/css/page.css
+++ b/css/page.css
@@ -10,11 +10,19 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-a:hover {
+a:active {
   transform: scale(0.9);
   transition: 0.5s;
+}
+
+@media (hover: hover) {
+  a:hover {
+    transform: scale(0.9);
+    transition: 0.5s;
+  }
 }
 
 .blockinfo {
