--- a/css/block.css
+++ b/css/block.css
@@ -1,7 +1,6 @@
 .block {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  padding-top: 0;
   gap: 1rem;
 }
 
@@ -16,8 +15,8 @@
   transition: 0.1s;
 
   img {
-    width: 80%;
-    height: 80%;
+    width: 320px;
+    height: 200px;
     transform: scale(1);
     transition: 0.5s;
   }
