--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ body {
 header {
   padding: 1rem;
   font-size: 3rem;
+  height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -46,4 +47,16 @@ main {
   header {
     font-size: 2rem;
   }
+}
+
+h1 {
+  font-size: 40px;
+}
+
+h2 {
+  font-size: 30px;
+}
+
+p {
+  font-size: 24px;
 }
